e2e/latency/fortio-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: fortio
  name: fortio
  namespace: curiefense
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fortio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fortio
    spec:
      containers:
      - image: istio/fortio:1.11.4
        name: fortio
        ports:
        - containerPort: 8080
          name: fortio-http
        livenessProbe:
          httpGet:
            path: /fortio
            port: fortio-http
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
          requests:
            memory: "10Mi"
            cpu: "100m"
      restartPolicy: Always
      automountServiceAccountToken: false
