e2e/latency/fortio-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: fortio
  name: fortio
  namespace: curiefense
spec:
  ports:
  - name: "fortio"
    port: 8080
    targetPort: 8080
    nodePort: 30100
  selector:
    app.kubernetes.io/name: fortio
  type: NodePort
  externalTrafficPolicy: "Cluster"
