e2e/latency/ratings-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo-ratings
  namespace: bookinfo
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ratings
    route:
    - destination:
        host: ratings
        port:
          number: 9080
